...
            "state" : "translated",
            "value" : "Articolo"
          }
        }
      }
    },
    "Artikel Filter" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Artikel Filter"
...
            "state" : "translated",
            "value" : "ore"
          }
        }
      }
    },
    "Swiss News" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Swiss News"
...
            "state" : "translated",
            "value" : "Altri sport"
          }
        }
      }
    },
    "Willkommen bei Swiss News 👋" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Willkommen bei Swiss News 👋"
...
            "state" : "translated",
            "value" : "Scienza"
          }
        }
      }
    },
    "Zeitraum" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zeitraum"
...
