...
                ArticleListView(
                    newsItems: newsItems,
                    readArticlesManager: readArticlesManager,
                    isViewingArticle: $isViewingArticle,
                    viewedArticles: $viewedArticles
                )
                .accessibilityIdentifier("articleList")
            }
        }
        .navigationTitle(title)
        .accessibilityIdentifier("newsCategoryView")
        .onAppear {
            isViewingArticle = false
...
