...
                    .frame(maxWidth: .infinity)
                    .padding(.top)
                }
            }
            .padding()
        }
        .accessibilityIdentifier("articleDetailView")
        .navigationTitle(String(localized: "Artikel"))
        .interactiveDismissDisabled(isLoading)
        .task {
            await loadContent()
        }
    }
...
